2020/rust/day4/dbg.txt
   Compiling day4 v0.1.0 (/home/j/git/balkian/advent-of-code/2020/rust/day4)
error[E0425]: cannot find value `byr` in this scope
  --> day4/src/main.rs:85:24
   |
85 |             if (1920 > byr || byr > 2002){
   |                        ^^^ help: you might have meant to use the available field: `self.byr`

error[E0425]: cannot find value `byr` in this scope
  --> day4/src/main.rs:85:31
   |
85 |             if (1920 > byr || byr > 2002){
   |                               ^^^ help: you might have meant to use the available field: `self.byr`

error[E0425]: cannot find value `byr` in this scope
  --> day4/src/main.rs:86:55
   |
86 |                 return Err(format!("invalid byr: {}", byr))
   |                                                       ^^^ help: you might have meant to use the available field: `self.byr`

warning: unused import: `std::num::ParseIntError`
 --> day4/src/main.rs:4:5
  |
4 | use std::num::ParseIntError;
  |     ^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unnecessary parentheses around `if` condition
  --> day4/src/main.rs:85:16
   |
85 |             if (1920 > byr || byr > 2002){
   |                ^^^^^^^^^^^^^^^^^^^^^^^^^^ help: remove these parentheses
   |
   = note: `#[warn(unused_parens)]` on by default

warning: unnecessary parentheses around `if` condition
  --> day4/src/main.rs:91:12
   |
91 |         if (2010 > iyr || iyr > 2020){
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^ help: remove these parentheses

warning: unnecessary parentheses around `if` condition
   --> day4/src/main.rs:112:12
    |
112 |         if (min > hgt || hgt > max){
    |            ^^^^^^^^^^^^^^^^^^^^^^^^ help: remove these parentheses

error[E0599]: no method named `and_then` found for type `u32` in the current scope
  --> day4/src/main.rs:84:35
   |
84 |         self.byr.ok_or("no byr")?.and_then(|x|{
   |                                   ^^^^^^^^ method not found in `u32`

error: aborting due to 4 previous errors; 4 warnings emitted

Some errors have detailed explanations: E0425, E0599.
For more information about an error, try `rustc --explain E0425`.
error: could not compile `day4`

To learn more, run the command again with --verbose.
